2005-05-30  Glenn Morris  <gmorris@ast.cam.ac.uk>

	* calendar/diary-lib.el (mark-included-diary-files): Only kill
	included diary buffer if it was not already being visited.
	Reported by Stephen Berman <Stephen.Berman@gmx.net>.

	* calendar/icalendar.el (top-level): Do not require 'appt.

	* mail/supercite.el (sc-select-attribution): Only use a list
	element from sc-attrib-selection-list if it returns a string.
	Reported by Davide G. M. Salvetti <salve@debian.org>.

2005-05-30  Juanma Barranquero  <lekktu@gmail.com>

	* thumbs.el (thumbs-thumbname): The resulting thubname now
	includes a hash value to improve its uniqueness, and has a ".jpg"
	extension.  Also, it is now a valid filename on all systems.
	(thumbs-make-thumb): Use `let', not `let*'.
	(thumbs-show-thumbs-list): Check for JPEG availability.

2005-05-30  Richard M. Stallman  <rms@gnu.org>

	* filesets.el (filesets-menu-ensure-use-cached):
	Prevent warning when emacs-version>= is undefined.

	* printing.el (pr-interactive-n-up): Use string-to-number.

	* emulation/tpu-mapper.el: Use eval-buffer, not eval-current-buffer.

	* emacs-lisp/bytecomp.el (byte-compile-nogroup-warn):
	Warn only when name to be defined is quoted.

2005-05-30  Nick Roberts  <nickrob@snap.net.nz>

	* progmodes/gdb-ui.el (gdb-toggle-breakpoint):
	Make regexp more robust.
	(gdb-display-assembler-buffer, gdb-frame-assembler-buffer):
	Force regeneration of disassembly.

2005-05-29  Jay Belanger  <belanger@truman.edu>

	* calc/calc.el (calc-user-invocation): Check if
	calc-invocation-macro is non-nil.

2005-05-29  Juri Linkov  <juri@jurta.org>

	* add-log.el (change-log-font-lock-keywords):
	Add `+' to e-mail regexp to accept mail address with keywords.

	* man.el (Man-name-regexp): Add `:' to accept qualified names.

2005-05-29  Luc Teirlinck  <teirllm@auburn.edu>

	* progmodes/inf-lisp.el (inferior-lisp-mode): Use delay-mode-hooks.

	* ielm.el (inferior-emacs-lisp-mode): Ditto.

2005-05-29  Richard M. Stallman  <rms@gnu.org>
